; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_stack.c__thr_stack_fix_protection.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_stack.c__thr_stack_fix_protection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_thr_stack_fix_protection(%struct.pthread* %0) #0 {
  %2 = alloca %struct.pthread*, align 8
  store %struct.pthread* %0, %struct.pthread** %2, align 8
  %3 = load %struct.pthread*, %struct.pthread** %2, align 8
  %4 = getelementptr inbounds %struct.pthread, %struct.pthread* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = load %struct.pthread*, %struct.pthread** %2, align 8
  %9 = getelementptr inbounds %struct.pthread, %struct.pthread* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @round_up(i32 %11)
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %7, i64 %13
  %15 = load %struct.pthread*, %struct.pthread** %2, align 8
  %16 = getelementptr inbounds %struct.pthread, %struct.pthread* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @round_up(i32 %18)
  %20 = call i32 (...) @_rtld_get_stack_prot()
  %21 = call i32 @mprotect(i8* %14, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @mprotect(i8*, i32, i32) #1

declare dso_local i32 @round_up(i32) #1

declare dso_local i32 @_rtld_get_stack_prot(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
